<resources>
    <string name="app_name">Droid Concepts Settings</string>
    <string name="eula_title">End User License Agreement</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    <string name="performance_settings_title">Performance settings</string>
    <string name="performance_title">Performance Settings</string>
    <string name="performance_settings_summary">Device performance tweaks</string>
    <string name="pref_lock_home_title">Lock home in memory</string>
    <string name="pref_lock_home_summary">Lock the home app in memory</string>
    <string name="pref_lock_mms_title">Lock messaging app in memory</string>
    <string name="pref_lock_mms_summary">Lock the messaging app in memory</string>
    <string name="pref_heapsize_title">VM heap size</string>
    <string name="pref_heapsize_summary">Maximum amount of memory per VM heap (requires reboot)</string>
    <string name="cpu_settings_title">CPU settings</string>
    <string name="cpu_title">CPU settings</string>
    <string name="cpu_summary">Governor and clock settings</string>
    <string name="cpu_governors_title">Available governors</string>
    <string name="cpu_governors_summary">List of available governors\nCurrently selected: %S</string>
    <string name="cpu_min_freq_title">Min CPU frequency</string>
    <string name="cpu_min_freq_summary">Minimum CPU frequency\nCurrently: %s</string>
    <string name="cpu_max_freq_title">Max CPU frequency</string>
    <string name="cpu_max_freq_summary">Maximum CPU frequency\nCurrently: %s</string>
    <string name="cpu_set_on_boot">Set on boot</string>
    <string name="cpu_set_on_boot_summary">Restore CPU settings on boot</string>
    <string name="android_dev_title">Development Tools</string>
    <string name="development_title">Dev Tools</string>
    <string name="spareparts_title">Spare Parts</string>
    <string name="terminal_title">Terminal</string>
    <string name="input_settings_title">Input settings</string>
    <string name="input_settings_summary">Extra imput settings</string>
    <string name="lockscreen_settings_title">Lockscreen settings</string>
    <string name="pref_lockscreen_music_controls_title">Lockscreen music controls</string>
    <string name="pref_lockscreen_music_controls_summary">Displays music controls on the lockscreen</string>
    <string name="pref_lockscreen_always_music_controls_title">Always display music controls</string>
    <string name="pref_lockscreen_always_music_controls_summary">Display music controls regardless of whether or not music is playing</string>
    <string name="ui_title">User interface</string>
    <string name="ui_summary">User interface settings and tweaks</string>
    <string name="ui_status_bar">Status Bar Customization</string>
    <string name="ui_rotation_title">Accelerometer rotation</string>
    <string name="pref_rotation_90_title">90 degrees</string>
    <string name="pref_rotation_180_title">180 degrees</string>
    <string name="pref_rotation_270_title">270 degrees</string>
    <string name="ui_other_title">Other</string>
    <string name="ui_lockscreen_title">Screen lock settings</string>
    <string name="pref_lockscreen_delay_title">Delay</string>
    <string name="pref_lockscreen_timeout_lock_delay">Screen timeout delay</string>
    <string name="pref_lockscreen_screenoff_lock_delay">Screen turned off delay</string>
    <string name="pref_lockscreen_timeout_lock_delay_summary">How long to delay before enabling screen lock when screen times out</string>
    <string name="pref_lockscreen_screenoff_lock_delay_summary">How long to delay before enabling screen lock when screen is turned off</string>
    <string name="title_color_picker">Pick a color</string>
    <string name="msg_color_picker">Tap on center color to confirm.\nPress back to cancel.</string>
    <string name="bc_title">Battery and Clock</string>
    <string name="bc_summary">Battery and Clock tweaks</string>
    <string name="battery_title">Battery</string>
    <string name="pref_battery_percentage_title">Battery Percentage</string>
    <string name="pref_battery_percentage_summary">Battery percentage displayed in the status bar</string>
    <string name="battery_status_color_title">Battery percentage color</string>
    <string name="clock_title">Clock</string>
    <string name="title_show_clock">Show clock</string>
    <string name="title_clock_color">Clock color</string>
    <string name="dp_title">Date and Provider</string>
    <string name="dp_summary">Date and provider tweaks</string>
    <string name="date_title">Date</string>
    <string name="title_date_color">Date color</string>
    <string name="plmn_title">PLMN carrier string</string>
    <string name="title_show_plmn_ls">Display PLMN (lockscreen)</string>
    <string name="summary_on_show_plmn_ls">PLMN field is displayed on lockscreen</string>
    <string name="summary_off_show_plmn_ls">PLMN field is not displayed on lockscreen</string>
    <string name="title_show_plmn_sb">Display PLMN (status bar)</string>
    <string name="summary_on_show_plmn_sb">PLMN field is displayed in status bar</string>
    <string name="summary_off_show_plmn_sb">PLMN field is not displayed in status bar</string>
    <string name="title_plmn_label_color">Carrier PLMN label color</string>
    <string name="spn_title">Settings for SPN carrier string</string>
    <string name="title_show_spn_ls">Display SPN (lockscreen)</string>
    <string name="summary_on_show_spn_ls">SPN field is displayed on lockscreen</string>
    <string name="summary_off_show_spn_ls">SPN field is not displayed on lockscreen</string>
    <string name="title_show_spn_sb">Display SPN (status bar)</string>
    <string name="summary_on_show_spn_sb">SPN field is displayed in status bar</string>
    <string name="summary_off_show_spn_sb">SPN field is not displayed in status bar</string>
    <string name="title_spn_label_color">Carrier SPN label color</string>
    <string name="title_notifications_sb">Status Bar Notifications</string>
    <string name="title_notifications_color_tweaks">Notifications Colors</string>
    <string name="summary_notifications_color_tweaks">Notifications ticker, ongoing notifications, latest notifications, clear notifications, etc.</string>
    <string name="title_notifications_ticker_color">Notifications ticker color</string>
    <string name="title_notifications_count_color">Notifications count color</string>
    <string name="title_no_notifications_color">No notification title color</string>
    <string name="title_clear_button_label_color">Clear notifications label color</string>
    <string name="title_ongoing_notifications_color">Ongoing notifications title color</string>
    <string name="title_latest_notifications_color">Latest notifications title color</string>
    <string name="title_notifications_items">Items Notifications</string>
    <string name="title_notifications_items_title">Items title color</string>
    <string name="title_notifications_items_text">Items text color</string>
    <string name="title_notifications_items_time">Items time color</string>
    <string name="et_title">Extra Tweaks</string>
    <string name="et_title_summary">Extra Tools for Interface Tweaks</string>
    <string name="et_reset">Reset</string>
    <string name="title_reset_ui_tweaks_to_defaults">Reset UI tweaks to default</string>
    <string name="et_xml">XML Tools</string>
    <string name="title_dialog_ui_interface">UI interface tweaks</string>
    <string name="message_dialog_reset">Reset all UI interface tweaks to default? Reboot to see changes.</string>
    <string name="reset_ui_success">UI interface tweaks reset! Reboot to see changes.</string>
    <string name="message_dialog_export">Enter a name for this file.  If the file already exists it will be overwritten.</string>
    <string name="xml_sdcard_unmounted">SD card not mounted!</string>
    <string name="xml_write_error">Error writing XML!</string>
    <string name="xml_export_success">XML export successful!</string>
    <string name="message_dialog_import">Are you sure you want to load this color theme?  Reboot to see changes</string>
    <string name="xml_file_not_found">XML file not found!</string>
    <string name="xml_io_exception">Error reading file!</string>
    <string name="xml_parse_error">Error parsing XML!</string>
    <string name="xml_invalid_color">Invalid color code in XML!</string>
    <string name="xml_import_success">XML import successful! Reboot to see changes.</string>
    <string name="xml_run_helper">Running settings helper</string>
    <string name="title_apply_theme">Select a theme</string>
    <string name="summary_apply_theme">Pick from a pre-made theme or a saved one on your SD card</string>
    <string name="title_save_theme">Save current theme</string>
    <string name="summary_save_theme">Save the current color settings to your SD card</string>
    <string name="title_notification_bar">Notification bar</string>
    <string name="title_custom_not_bar">Custom notification bar</string>
    <string name="summary_custom_not_bar_on">Using customized notification bar color and style</string>
    <string name="summary_custom_not_bar_off">Using classic Android notification bar</string>
    <string name="title_not_bar_color_mask">Bar color</string>
    <string name="summary_not_bar_color_mask">Note: Transparency (alpha) setting will not be applied</string>
    <string name="title_custom_exp_not_bar">Custom pulldown bar</string>
    <string name="summary_custom_exp_not_bar_on">Using customized expanded pulldown bar color and style</string>
    <string name="summary_custom_exp_not_bar_off">Using classic Android expanded pulldown bar</string>
    <string name="title_not_exp_bar_color_mask">Pulldown bar color</string>
    <string name="summary_not_exp_bar_color_mask">Pick a color to apply to elements of the pulldown notification bar</string>
    <string name="title_expanded_widget">Notification power widget</string>
    <string name="summary_expanded_widget">Use the expanded views power widget</string>
    <string name="expanded_color_mask">Indicator color</string>
    <string name="title_widget_picker">Widget buttons</string>
    <string name="summary_widget_picker">Pick your widget buttons</string>
    <string name="title_expanded_hide_onchange">Hide on change</string>
    <string name="summary_expanded_hide_onchange">Hide the notification pulldown after toggling a widget button</string>
    <string name="title_toggle_wifi">Toggle Wifi</string>
    <string name="title_toggle_bluetooth">Toggle Bluetooth</string>
    <string name="title_toggle_gps">Toggle GPS</string>
    <string name="title_toggle_sound">Toggle Sound</string>
    <string name="title_toggle_brightness">Toggle Brightness</string>
    <string name="title_toggle_sync">Toggle Sync</string>
    <string name="title_toggle_wifiap">Toggle Wifi AP</string>
    <string name="title_toggle_screentimeout">Toggle Screentimeout</string>
    <string name="title_toggle_mobiledata">Toggle Mobiledata</string>
    <string name="title_toggle_lockscreen">Toggle Lockscreen</string>
    <string name="title_toggle_networkmode">Toggle 2G/3G</string>
    <string name="title_toggle_autorotate">Toggle Orientation</string>
    <string name="title_toggle_airplane">Toggle Airplane mode</string>
    <string name="title_button_modes">Button modes</string>
    <string name="title_toggle_flashlight">Toggle LED flashlight</string>
    <string name="title_toggle_sleep">Go to sleep</string>
    <string name="pref_brightness_mode_title">Brightness modes</string>
    <string name="pref_brightness_mode_summary">Choose how the brightness button changes modes</string>
    <string name="pref_network_mode_title">Network modes</string>
    <string name="pref_network_mode_summary">Choose how the NetworkMode button changes modes</string>
    <string name="pref_screentimeout_mode_title">Screentimeout modes</string>
</resources>