<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<!-- Rotation -->
    <PreferenceCategory android:title="@string/ui_rotation_title">
        <CheckBoxPreference android:key="pref_rotation_90"
                            android:title="@string/pref_rotation_90_title" />
        <CheckBoxPreference android:key="pref_rotation_180"
                            android:title="@string/pref_rotation_180_title" />
        <CheckBoxPreference android:key="pref_rotation_270"
                            android:title="@string/pref_rotation_270_title" />
    </PreferenceCategory>

<!-- screen timeout delay -->
    <PreferenceCategory android:title="@string/ui_lockscreen_title">
        <ListPreference android:key="pref_lockscreen_timeout_delay" 
                        android:dialogTitle="@string/pref_lockscreen_delay_title"
                        android:title="@string/pref_lockscreen_timeout_lock_delay" 
                        android:summary="@string/pref_lockscreen_timeout_lock_delay_summary"
                        android:entries="@array/pref_lockscreen_delay_entries" 
                        android:entryValues="@array/pref_lockscreen_delay_values" />

<!-- screen off delay -->
        <ListPreference android:key="pref_lockscreen_screenoff_delay" 
                        android:dialogTitle="@string/pref_lockscreen_delay_title"
                        android:title="@string/pref_lockscreen_screenoff_lock_delay" 
                        android:summary="@string/pref_lockscreen_screenoff_lock_delay_summary"
                        android:entries="@array/pref_lockscreen_delay_entries" 
                        android:entryValues="@array/pref_lockscreen_delay_values" />
    </PreferenceCategory>

<!-- Expanded View Power Widget -->
   <PreferenceCategory android:title="@string/title_expanded_widget">
      <CheckBoxPreference android:key="expanded_widget"
                          android:title="@string/title_expanded_widget"
                          android:summary="@string/summary_expanded_widget"
                          android:defaultValue="true" />
      <Preference android:key="expanded_color_mask"
                  android:title="@string/expanded_color_mask"
                  android:summary="@string/expanded_color_mask"
                  android:defaultValue="-1"
                  android:dependency="expanded_widget" />
      <PreferenceScreen android:key="widget_picker"
                        android:title="@string/title_widget_picker" 
                        android:summary="@string/summary_widget_picker">
          <intent android:action="android.intent.action.MAIN"
                  android:targetPackage="com.droidconcepts.settings"
                  android:targetClass="com.droidconcepts.settings.activities.WidgetActivity" />
      </PreferenceScreen>
      <CheckBoxPreference android:key="expanded_hide_onchange"
                          android:title="@string/title_expanded_hide_onchange"
                          android:summary="@string/summary_expanded_hide_onchange"
                          android:defaultValue="false"
                          android:dependency="expanded_widget" />
   </PreferenceCategory>

<!-- Status Bar Customization -->
    <PreferenceCategory android:title="@string/ui_status_bar">
        <!-- Battery and Clock -->
        <PreferenceScreen android:key="battery_clock_settings"
                          android:title="@string/bc_title" 
                          android:summary="@string/bc_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.droidconcepts.settings"
                    android:targetClass="com.droidconcepts.settings.activities.BatteryClock" />
        </PreferenceScreen>
        <!-- Date and Provider -->
        <PreferenceScreen android:key="date_provider_settings"
                          android:title="@string/dp_title" 
                          android:summary="@string/dp_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.droidconcepts.settings"
                    android:targetClass="com.droidconcepts.settings.activities.DateProvider" />
        </PreferenceScreen>
        <!-- Notification Colors -->
        <PreferenceScreen android:key="notification_settings"
                          android:title="@string/title_notifications_color_tweaks"
                          android:summary="@string/summary_notifications_color_tweaks">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.droidconcepts.settings"
                    android:targetClass="com.droidconcepts.settings.activities.Notifications" />
        </PreferenceScreen>
        <!-- Extras -->
        <PreferenceScreen android:key="extra_tweaks"
                          android:title="@string/et_title" 
                          android:summary="@string/et_title_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.droidconcepts.settings"
                    android:targetClass="com.droidconcepts.settings.activities.ExtraTweaks" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>
