<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<!-- Performance Settings -->
<PreferenceCategory android:title="@string/performance_title">
    <PreferenceScreen android:key="performance_settings"
                      android:title="@string/performance_settings_title" 
                      android:summary="@string/performance_settings_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.droidconcepts.settings"
                    android:targetClass="com.droidconcepts.settings.activities.PerformanceSettingsActivity" />
    </PreferenceScreen>  
    <PreferenceScreen android:key="cpu_settings"
	              android:title="@string/cpu_title"
		      android:summary="@string/cpu_summary">
            <intent android:action="android.intent.action.MAIN"
		    android:targetPackage="com.droidconcepts.settings"
		    android:targetClass="com.droidconcepts.settings.activities.CPUActivity" />
    </PreferenceScreen>
</PreferenceCategory>

<!-- Android Development Tools -->
<PreferenceCategory android:title="@string/android-dev_title">
    <PreferenceScreen android:key="development"
                      android:title="@string/development_title" 
                      android:summary="@string/development_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.development"
                    android:targetClass="com.android.development.development" />
    </PreferenceScreen>  
    <PreferenceScreen android:key="spare_parts"
	              android:title="@string/spareparts_title"
		      android:summary="@string/spareparts_summary">
            <intent android:action="android.intent.action.MAIN"
		    android:targetPackage="com.android.spare_parts"
		    android:targetClass="com.android.spare_parts.SpareParts" />
    </PreferenceScreen>
    <PreferenceScreen android:key="terminal"
	              android:title="@string/terminal_title"
		      android:summary="@string/terminal_summary">
            <intent android:action="android.intent.action.MAIN"
		    android:targetPackage="com.android.term"
		    android:targetClass="com.android.term.Term" />
    </PreferenceScreen>
</PreferenceCategory>

</PreferenceScreen>
